<resources>
    <string name="app_name">Winka</string>
    <string name="welcome_msg">Bienvenido!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="navbot1">Inicio</string>
    <string name="navbot2">Mi cuenta</string>
    <string name="navbot3">Pagar</string>
    <string name="navbot4">Calendario</string>
    <string name="navbot5">Chat</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="balance" translatable="false">Cargando...</string>
    <string name="name" translatable="false">No identificado</string>
    <string name="profit" translatable="false">$0</string>
    <string name="mail" translatable="false">No identificado</string>
    <string name="fecha_vencimiento" translatable="false">Fecha de Vencimiento</string>
    <string name="confirmarrecibodecompra" translatable="false">Recibi mi compra</string>
    <string-array name="bancos">
        <item>BBVA</item>
        <item>Galicia</item>
        <item>ICBC</item>
        <item>Santander Rio</item>
    </string-array>

</resources>
