<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navbot1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/navbot2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/navbot5"/>

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/navbot4"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/navbot2"/>

</menu>