<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/topMenu"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bordes_inferior_shape"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_guntur_medium"
                    android:text="@string/name"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_guntur_medium"
                    android:text="@string/mail"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/accountBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_guntur_medium"
                    android:text="@string/balance"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/accountProfits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_guntur_medium"
                    android:text="@string/profit"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center">


                <ImageButton
                    android:id="@+id/floating_action_button1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"

                    android:background="@drawable/ripple_oval"
                    android:elevation="8dp"
                    android:src="@drawable/ic_monetization_on_black_56dp" />

                <ImageButton
                    android:id="@+id/floating_action_button2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"

                    android:background="@drawable/ripple_oval"
                    android:elevation="8dp"
                    android:src="@drawable/ic_local_atm_black_56dp" />

                <ImageButton
                    android:id="@+id/floating_action_button3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="16dp"

                    android:background="@drawable/ripple_oval"
                    android:elevation="8dp"
                    android:src="@drawable/ic_code_black_56dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bordes_all_shape"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/tituloMisMovimientos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"

                    android:text="Mis Movimientos"
                    android:textColor="#FFFFFF" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movementsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>